# study

./: .gitignore  README.md
CMakeExample/: readme_virtualenv
CodeBlocks/: CMakeLists.txt  like  like.c  like.i  like.s
CodeBlocks/GTK01/: GTK01.cbp  GTK01.layout
CodeBlocks/arm01/: arm01.cbp  arm01.layout
CodeBlocks/ch0721/: CMakeCache.txt  Makefile  cmake_install.cmake  list0721  list0721.c
CodeBlocks/ch0732/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  list0732  list0732.c  list0732b  list0732b.c  test.xml
CodeBlocks/ch08/: list0823.c
CodeBlocks/ch12/: CMakeLists.txt  a  a.txt  ch12.cbp  ch12.depend  ch12.layout  list1221  list1221.c  list1222.c  list1223.c  list1224.c  list1232.c
CodeBlocks/ch13/: ch13.cbp  ch13.depend  list1313.c
CodeBlocks/ch14/: ch14.cbp  ch14.depend  ch14.layout  list1414B.c  list1421.c
CodeBlocks/ch15/: barcode.eps  barcode2.eps  ch15.cbp  ch15.depend  ch15.layout  list1511_no_error_handling.c  list1513.c
CodeBlocks/ch2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  list0431  list0431a.c  list0431a.s  list0431b.c  list0431main.c  list0431main.s  test.sh
CodeBlocks/ch3/: CMakeCache.txt  CMakeLists.txt  Makefile  arg_main.c  arugmenttest  cmake_install.cmake
CodeBlocks/ch622/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  list0622  list0622.c  list0623  list0623.c
CodeBlocks/console/: 1  a.txt  app_unicodeutil.c  app_unicodeutil.h  b.txt  console.cbp  console.depend  console.layout  libudev_exam.c  linux_time.c  main.c  sddetect.c  test_main_unicode.c  test_signal.c
CodeBlocks/gdlib/libgd/: .hg_archival.txt  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  config.h  install_manifest.txt
CodeBlocks/gdlib/libgd/examples/: Makefile  arc  cmake_install.cmake  crop  gif  nnquant  tgaread
CodeBlocks/gdlib/libgd/libimagequant/: Makefile
CodeBlocks/gdlib/libgd/libimagequant-prefix/src/: libimagequant-2.0.0-src.tar.bz2
CodeBlocks/gdlib/libgd/libimagequant-prefix/src/libimagequant-stamp/: download-libimagequant.cmake  extract-libimagequant.cmake  libimagequant-urlinfo.txt  verify-libimagequant.cmake
CodeBlocks/gdlib/libgd/src/: Makefile  annotate  cmake_install.cmake  gd2copypal  gd2togif  gd2topng  gdcmpgif  gdparttopng  gdtopng  giftogd2  pngtogd  pngtogd2  webpng
CodeBlocks/gdlib/libgd/tests/: Makefile  cmake_install.cmake
CodeBlocks/staticlib01/: staticlib01.cbp  staticlib01.depend
CodeBlocks/templete/: Makefile  hellomake  printdir.c  t.c
Doxygen_template/: Doxyfile  README
GO/: helloworld.go
IOT/: weather.py
MasteringEmbeddedLinuxProgramming_Code/: ReadMe.txt
Scripts/: contributors.txt
Scripts/SI/: GLOBAL.WK3
UnixDomain/: Makefile  README.md  sum_client.c  sum_server.c
app/dbus/: CMakeLists.txt  dbus_client.cpp  dbus_server.cpp
armspec/: busalign  busalign.c
build_template/old2/: Makefile.am  configure.ac
buildtest/: Makefile.in  README  configure  configure.ac
buildtest/src/: Makefile.am  Makefile.in  like.c
codetest/: hextoint  hextoint.c
codetest/GLIB/mainloop/: CMakeLists.txt
codetest/GLIB/mainloop/src/: myQ.c
conftest/: Makefile  Makefile.am  Makefile.in  configure  configure.in
driver/: Makefile
fswebcam/: build.sh  fswebcam.c
gtk/helloworld/src/: Makefile  Makefile.am  Makefile.in  gui_core.c  hello_gtk.c
gtk/helloworld/src/.deps/: gui_core.Po  hello_gtk.Po
gui_podo/podo/: CMakeLists.txt
gui_podo/podo/.svn/: wc.db
gui_podo/podo/examples/network/tcpserver/: .main.cpp.swp  main.cpp
gui_podo/podo/examples/network/udpclient/: .main.cpp.swp  main.cpp
gui_podo/podo/examples/network/udpserver/: .main.cpp.swp  main.cpp
gui_podo/podo/src/: CMakeLists.txt
gui_podo/podo/src/base/: .PDProcess.cpp.swp  PDProcess.cpp
gui_podo/podo/src/gui/: .PDPainter.cpp.swp  .PDPainter.h.swp  PDPainter.cpp
gui_podo/podo/toolchain/nxp4330/: arm-cortex_a9-linux-gnueabi.cmake  build.sh
gxlib_0.9.1/: script.xml
i2cstudy/: i2c_binary  i2c_interface.c  testmain.c
lddstudy/: .built-in.o.cmd  .test.ko.cmd  .test.mod.o.cmd  .test.o.cmd  Makefile.sample
netclient/: Makefile  client
netserver/: Makefile
pclddstudy/: .paramtest.ko.cmd  .paramtest.mod.o.cmd  .paramtest.o.cmd  .sk.ko.cmd  .sk.mod.o.cmd  .sk.o.cmd  Makefile  sk.c
plsrc/: a.txt  gd.pl  logview.pl  sdlog.txt  search.pl  t1.pl  t2.pl  t3.pl
shellscript/: a.sh  backupD.sh  core_test  foldertar.sh  here.sh  logview.pl  mymount.sh  setenv_in_uboot.txt
study_zmq/: Makefile  README.TXT  client.c  cmq_client.c  server.c
studygst/: .gitignore  README
studygst/adaspump/src/: Makefile  Makefile.am  Makefile.in  gstadaspump.c  gstadaspump.h
studygst/adaspump/src/.deps/: libgstadaspump_la-gstadaspump.Plo
studygst/adaspump/src/.libs/: libgstadaspump.exp  libgstadaspump.lai  libgstadaspump.ver
studygst/gst-plugin/src/: Makefile  Makefile.am  README.txt  gstaudiofilter.c  gstrgbdemux.c  gstrgbdemux.h  gstvgagoldfilter.c  gstvgagoldfilter.h  gstvgahorizontaledge.c  gstvgahorizontaledge.h  gstvgaratio.c  gstvgaratio.h  gstvgathreshold.c  gstvgathreshold.h  gstvideofilter.c  test.c
studygst/gst-plugin/src/.deps/: libgstaudiofilterexample_la-gstaudiofilter.Plo  libgstrgbdemux_la-gstrgbdemux.Plo  libgstvgagoldfilter_la-gstvgagoldfilter.Plo  libgstvgahorizontaledge_la-gstvgahorizontaledge.Plo  libgstvgaratio_la-gstvgaratio.Plo  libgstvgathreshold_la-gstvgathreshold.Plo  libgstvideofilterexample_la-gstvideofilter.Plo
studygst/hello_gst/hello/: .cproject  .gitignore  CMakeLists.txt  main.c
studygst/libgst_myfilter/src/: Makefile.am  gstmyfilter.c  gstmyfilter.h
studygst/pcgst/: Makefile  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac  libtool
studygst/pcgst/src/: Makefile  Makefile.am  Makefile.in  test1.c
studygst/pcgst/src/.deps/: test-test1.Po
use_turbojpeg/: CMakeLists.txt  Makefile  REAMDE.MD  buffer.yuv  jpegutil.c  main.c  makeyuv.py  output640480.yuv  tags  tj_main.c  toolchain.cmake  yuv420torgb.c
v4l2/uvccam/: README  configure.ac
v4l2/uvccam/src/: Makefile.am  uvccapture.c
(+1100 files in other folders)
