
AC_PREREQ([2.69])
AC_INIT(like , 0.0.1, johlim@daum.net,like.tar.gz)
AC_CONFIG_SRCDIR([src/like.c])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CC
AC_PROG_CPP

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile
                 src/Makefile])
AC_OUTPUT
