cmake_minimum_required (VERSION 2.6)
project (list0732b)
include_directories(/usr/include/glib-2.0)
include_directories(/usr/lib/i386-linux-gnu/glib-2.0/include)
include_directories(/usr/include/libxml2)
include_directories(/usr/lib/i386-linux-gnu)
add_executable (list0732b  list0732b.c)
find_library(NAMES glib-2.0 PATHS /usr/lib)
find_library(NAMES xml2 PATHS /usr/lib)
TARGET_LINK_LIBRARIES(list0732b  glib-2.0 xml2 )	
add_definitions(-Wall -g -O0)
